Fix big gap between helps and inputs

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -458,7 +458,7 @@ header span, header label, header .open_in_chrome_btn {
 
 /*> help */
 .help {
-    display: inline-block;
+    display: inline-table;
 }
 
 .help_link, .help_message {
